fix(response-core): 修复BindException处理中的方法调用错误